force-app/main/default/objects/AcctSeed__Journal_Entry__c/fields/AcctSeed__Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Used to specify accounting period for financial reporting. Accounting period must have a value of Open.</inlineHelpText>
    <label>Accounting  Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <infoMessage>The accounting period status must be open</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
    <relationshipLabel>Journal Entry</relationshipLabel>
    <relationshipName>Journal_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>