force-app/main/default/objects/AcctSeed__Journal_Entry__c/fields/AcctSeed__Journal_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Journal_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>Used to date transaction lines of journal entry line unless populates specifically on the journal entry line.</inlineHelpText>
    <label>Journal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>