force-app/main/default/objects/AcctSeed__Journal_Entry__c/fields/AcctSeed__Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total_Credits__c</fullName>
    <inlineHelpText>Total Credits from Journal entry Lines. Must equal Total Debits at time of posting.</inlineHelpText>
    <label>Total Credits</label>
    <summarizedField>AcctSeed__Journal_Entry_Line__c.AcctSeed__Credit__c</summarizedField>
    <summaryForeignKey>AcctSeed__Journal_Entry_Line__c.AcctSeed__Journal_Entry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>