force-app/main/default/objects/AcctSeed__Journal_Entry__c/fields/Commission_Record__c.field-meta.xml
<CustomField>
    <fullName>Commission_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Record</label>
    <referenceTo>CommissionRecord2__c</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>