force-app/main/default/objects/AcctSeed__Journal_Entry__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Line_Count__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Journal_Date__c</columns>
    <columns>AcctSeed__Total_Debits__c</columns>
    <columns>AcctSeed__Total_Credits__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>GMBLASG__Posted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>