force-app/main/default/objects/AcctSeed__Journal_Entry__c/listViews/AcctSeed__Posted.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Posted</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Journal_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Total_Credits__c</columns>
    <columns>AcctSeed__Total_Debits__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </filters>
    <label>Posted</label>
</ListView>