force-app/main/default/objects/AcctSeed__Journal_Entry__c/listViews/AcctSeed__Unposted.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Unposted</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Journal_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>AcctSeed__Total_Credits__c</columns>
    <columns>AcctSeed__Total_Debits__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GMBLASG__Posted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unposted</label>
</ListView>