force-app/main/default/objects/AcctSeed__Journal_Entry__c/listViews/Modified_Today_for_Internal_JE_Lines.listView-meta.xml
<ListView>
    <fullName>Modified_Today_for_Internal_JE_Lines</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Line_Count__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Journal_Date__c</columns>
    <columns>AcctSeed__Total_Debits__c</columns>
    <columns>AcctSeed__Total_Credits__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>GMBLASG__Posted__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>Rubel</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>1/25/2019 12:00 AM</value>
    </filters>
    <label>Modified for Internal JE Lines</label>
</ListView>